--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-minimal
-title: Dictionary for Spanish ⇒ North Sámi
-description: An electronic dictionary from Spanish to North Sámi
+title: Dictionary for Spanish ⇒ North Saami
+description: An electronic dictionary from Spanish to North Saami
